@@ -1,2 +1,3 @@
-VERSION=7.18.00
-YEARS=1992-2012
+#define AUTHOR  "Frank B. Brokken (f.b.brokken@rug.nl)";
+#define VERSION "8.00.00"
+#define YEARS "1992-2012"
