@@ -2,27 +2,20 @@
 
 void read_config_file(FILE *config)
 {
-    char *buf = NULL;
-    char *line = NULL;
+    char *buf = xrealloc(NULL, MAX_PATH_);
+    char *line = xstrdup("");
 
-    xrealloc(buf, MAX_PATH_);
-    xrealloc(line, 1);
-    line[0] = 0;
-    
-    while (1)
+    while (fgets(buf, MAX_PATH_, config))      /* read a line */
     {
-        if (fgets(buf, MAX_PATH_, config))      /* read a line */
-        {
-            size_t length = cut_off_nl(buf);    /* remove final \n  */
+        size_t length = cut_off_nl(buf);    /* remove final \n  */
 
-            if 
-            (
-                !has_comment(&length, buf)
-                &&
-                line_continues(&line, buf, length)
-            )
-                continue;
-        }
+        if 
+        (
+            !has_comment(&length, buf)
+            &&
+            line_continues(&line, buf, length)
+        )
+            continue;
 
         if (!empty(line))
             check_parameters(line);
@@ -31,3 +24,4 @@ void read_config_file(FILE *config)
         line[0] = 0;
     }
 }
+
